Jenkins/Platform/dev/platform-dev-jenkins-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.global-static-ip-name: EXTERNAL_IP
    networking.gke.io/v1beta1.FrontendConfig: "frontendconfig-jenkins-server"
    ingress.gcp.kubernetes.io/pre-shared-cert: "SELF_SIGNED_CERT"
  labels:
    env: dev
    platform: platform
    region: asia-northeast3
    service: jenkins-system
  name: elb-mkt-dev-platform-jenkins
  namespace: jenkins-system
spec:
  rules:
  - host: DNS_HOST
    http:
      paths:
      - backend:
          service:
            name: jenkins-mkt-dev-platform
            port:
              number: 8080
        path: "/"
        #pathType: ImplementationSpecific
        pathType: Prefix
